#3784 : Fix change shift template icon click bug

--- a/members_space/static/css/members-space.css
+++ b/members_space/static/css/members-space.css
@@ -12,6 +12,10 @@ body {
     }
 }
 
+/* -- Calendar */
+#shift_choice .shift {
+    padding-left:  5px;
+}
 /* -- Tiles */
 
 .tiles_container {
